--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -103,6 +103,7 @@ body {
 }
 
 .CarouselSearch {
+    position: relative;
     display:flex; 
     align-items:flex-end;
     border-radius: 10px;
@@ -122,6 +123,7 @@ body {
 }
 
 .CarouselSearch button {
+    cursor: pointer;
     border: 0;
     border-radius: 0px 5px 5px 0px;
     background: var(--PRIMARY_COLOR);
@@ -134,6 +136,26 @@ body {
     width: 30px;
 }
 
+.SearchAutoComplete {
+    display: none; 
+}
+
+.SearchAutoComplete.show{
+    z-index: 9999;
+    top: 46px;
+    position: absolute;
+    width:400px;
+    display: flex;
+    flex-wrap: wrap;
+    background-color: var(--WHITE_BACKGROUND);
+}
+
+.SearchAutoCompleteItem{
+    width:33%;
+    padding: 16px;
+    font-size: 16px;
+    cursor: pointer;
+}
 
 .Container {
     width: 100%;
