--- a/templates/index.html
+++ b/templates/index.html
@@ -27,9 +27,11 @@
         <div class = "CarouselContent">  
             <div class = "CarouselSloganFirst" style = "font-size: 28px">輕鬆享受台北一日悠閒</div>
             <div class = "CarouselSloganSecond">探索每個角落，體驗城市的深度旅遊行程</div>
-            <form class = "CarouselSearch">
-                <input placeholder="輸入景點名稱查詢"  type = "text">
-                <button type="button"><img src="images/icon_search.png"></button>
+            <form class = "CarouselSearch" action="api/attractions" method="get">
+                <input class = "CarouselInput" name="keyword"  placeholder="輸入景點名稱查詢"  type = "text">
+                <button class = "CarouselButton" type="button"><img src="images/icon_search.png"></button>
+                <div class = "SearchAutoComplete">
+                </div>
             </form>
         </div>
     
@@ -47,4 +49,5 @@
     <script src="scripts/component.js"></script>
     <script src="scripts/fetchData.js"></script>
     <script src="scripts/infinityScroll.js"></script>
+    <script src="scripts/eventHandler.js"></script>
 </body>
