add class and refactor

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,4 +50,6 @@
     <script src="scripts/fetchData.js"></script>
     <script src="scripts/infinityScroll.js"></script>
     <script src="scripts/eventHandler.js"></script>
+    <script type="module" src="scripts/dataService.js"></script>
+    <script type="module" src="scripts/searchAutoCompleteController.js"></script>
 </body>
