coding Handler with oopt

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,10 +46,14 @@
         </div>
     </div>
     <div class = "ScrollLoader"></div>
-    <script src="scripts/component.js"></script>
+    <!-- <script src="scripts/component.js"></script>
     <script src="scripts/fetchData.js"></script>
     <script src="scripts/infinityScroll.js"></script>
-    <script src="scripts/eventHandler.js"></script>
+    <script src="scripts/eventHandler.js"></script> -->
     <script type="module" src="scripts/dataService.js"></script>
-    <script type="module" src="scripts/searchAutoCompleteController.js"></script>
+    <script type="module" src="scripts/carouselSearchController.js"></script>
+    <script type="module" src="scripts/contentController.js"></script>
+    <script type="module" src="scripts/trigger.js"></script>
+
+
 </body>
