--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -18,8 +18,9 @@ div {
 body {
     overflow-x: hidden;
     height: 100%;
-    width:100%;
+    width:100vw;
     margin:0px;
+    
 }
 
 .Navbar {
@@ -30,7 +31,7 @@ body {
     background-color: var(--ADDITIONAL_COLOR_WHITE);
     justify-content: space-between;
     font-size: 20px;
-    width: 100%;
+    width: 100vw;
     height: 54px;
     line-height:54px;
 }
