--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -5,12 +5,18 @@
     --GRAY_700: #757575;
     --ADDITIONAL_COLOR_WHITE: #FFFFFF;
     --PRIMARY_BORDER: rgba(0, 0, 0, .1);
-
+    --BOX_SHADOW: #AABBCC;
     /* background-color*/
     --COPYRIGHT_BACKGROUND: #757575;
     --WHITE_BACKGROUND: #FFFFFF;
     --TITLE_BACKGROUND: rgba(0, 0, 0, .6);
 }
+
+* {
+    box-sizing: border-box;
+    font-family: 'Noto Sans TC';
+}
+
 
 div {
     box-sizing: border-box;
@@ -119,9 +125,11 @@ body {
     padding: 15px;
     font-weight: 700;
     font-size: 16px;
-    width: 400px;
+    width: 100%;
+    max-width: 400px;
     height: 46px;
     background: var(--ADDITIONAL_COLOR_WHITE);
+    box-shadow: 0px 0px 20px var(--BOX_SHADOW);
 }
 
 .CarouselSearch button {
@@ -143,19 +151,26 @@ body {
 }
 
 .SearchAutoComplete.show{
+    box-shadow: 0px 0px 20px var(--BOX_SHADOW);
     z-index: 9999;
+    margin-top: 5px;
     top: 46px;
     position: absolute;
-    width:400px;
+    max-width:400px;
+    width: calc(100% - 53);
+    height: 162px;
     display: flex;
     flex-wrap: wrap;
     background-color: var(--WHITE_BACKGROUND);
 }
 
 .SearchAutoCompleteItem{
+    font-style: normal;
+    font-weight: 500;
     width:33%;
-    padding: 16px;
-    font-size: 16px;
+    padding: 10px 15px;
+    font-size: 14px;
+    line-height: 28px;
     cursor: pointer;
 }
 
@@ -174,11 +189,11 @@ body {
     grid-template-columns: 25% 25% 25% 25%;
 }@media (max-width:1200px){
     .Content {
-        grid-template-columns: auto auto ;
+        grid-template-columns: 50% 50% ;
     }
 }@media (max-width:600px){
     .Content {
-        grid-template-columns: auto ;
+        grid-template-columns: 100% ;
     }
 }
 
@@ -195,18 +210,19 @@ body {
     border-radius: 5px;
 }@media (max-width:1200px){
     .Card {
-        max-width: 321px;
-    }
-}@media (max-width:600px){
-    .Card {
-        max-width: 321px;
+        max-width: calc(100% - 50px);
+
     }
 }
 
 .Card .ImgWrapper{
     width: 100%;
-    height: 197px;
+    min-height: 197px;
     background-size: cover;
+}@media (max-width:1200px){
+    .Card .ImgWrapper {
+        min-height: 235px;
+    }
 }
 
 img{
@@ -239,7 +255,6 @@ img{
 }
 
 .Footer {
-    position: fixed;
     display: flex;
     width:100%;
     height: 104px;
