--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -1,35 +1,3 @@
-:root {
-    --PRIMARY_COLOR: #448899;
-    --SECONDARY_COLOR: #757575;
-    --SECONDARY_COLOR_GRAY_70: #666666;
-    --GRAY_20: #E8E8E8;
-    --GRAY_700: #757575;
-    --ADDITIONAL_COLOR_WHITE: #FFFFFF;
-    --PRIMARY_BORDER: rgba(0, 0, 0, .1);
-    --BOX_SHADOW: #AABBCC;
-    /* background-color*/
-    --COPYRIGHT_BACKGROUND: #757575;
-    --WHITE_BACKGROUND: #FFFFFF;
-    --TITLE_BACKGROUND: rgba(0, 0, 0, .6);
-}
-
-* {
-    box-sizing: border-box;
-    font-family: 'Noto Sans TC';
-}
-
-
-div {
-    box-sizing: border-box;
-}
-body {
-    overflow-x: hidden;
-    height: 100%;
-    width:100vw;
-    margin:0px;
-    
-}
-
 .Navbar {
     top: 0px;
     display: flex;
@@ -41,6 +9,8 @@ body {
     width: 100vw;
     height: 54px;
     line-height:54px;
+    border: 1px solid #E8E8E8;
+
 }
 .NavbarContent{
     margin: 0px auto;
@@ -217,7 +187,6 @@ body {
 }@media (max-width:1200px){
     .Card {
         max-width: calc(100% - 50px);
-
     }
 }
 
