add rwd mobile layput

--- a/templates/attraction.html
+++ b/templates/attraction.html
@@ -30,11 +30,12 @@
  
     <div class ="Content">
         <div class = "Main">
-            <div class = "LeftArrow"></div>
-            <div class = "RightArrow"></div>
-            <div class = "NavigationDots"></div>
-            <div class = "AttractionCarousel"></div>
-            <div></div>
+            <div class = "CarouselWrapper">
+                <div class = "LeftArrow"></div>
+                <div class = "RightArrow"></div>
+                <div class = "NavigationDots"></div>
+                <div class = "AttractionCarousel"></div>
+            </div>
             <div class = "AttractionReserve">
                 <div class = "AttractionReserveTop">
                     <div class = "Name"></div>
