--- a/static/styles/attraction.css
+++ b/static/styles/attraction.css
@@ -59,31 +59,36 @@
 }
 
 .Main {
-    position: relative;
-    display: grid;
-    grid-template-columns: 540px 30px 600px ;
-    max-height: 400px;
-    margin: 0 15px 50px 15px;
-}@media (max-width:1200px){
+    display: flex;
+    height: 400px;
+    padding: 0 15px;
+    margin-bottom: 50px;
+}@media (max-width:800px){
     .Main {
-        grid-template-columns: 540px 0px 600px ;
-
+        height:auto;
+        display: block;
     }
 }
 
-.AttractionReserve {
-    display: grid;
-    grid-template-rows: 90px 310px;
+.CarouselWrapper {
+    position: relative;
+    width: calc(50% - 60px);
+
+}@media (max-width:800px){
+    .CarouselWrapper {
+        width: 100%;
+    }
 }
 
 .AttractionCarousel {
     overflow: hidden;
     display: grid;
     grid-auto-flow: column;  
-    grid-auto-columns: 540px;
+    grid-auto-columns: 100%;
     scroll-behavior: smooth;
-    max-width: 540px;
     border-radius: 5px;
+    width: 100%;
+    height: 100%;
 }
 
 .ImgWrapper {
@@ -103,8 +108,8 @@
     width: 36px;
     height: 36px;
     left: 10px;
-    top: 185px;
-
+    top: 50%;
+    transform: translateY(-50%);
     background: url(../images/btn_leftArrow.png)
 }
 
@@ -113,8 +118,9 @@
     position: absolute;
     width: 36px;
     height: 36px;
-    left: calc(50% - 88px);
-    top: 185px;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
 
     background: url(../images/btn_rightArrow.png)
 }
@@ -125,7 +131,7 @@
     display: grid;
     grid-auto-flow: column; 
     bottom: 13px;
-    left: 25%;
+    left: 50%;
 }
 
 .Dot{
@@ -142,6 +148,20 @@
     height: 12px;
     background: url(../images//circle_active.png);
     background-repeat: no-repeat;
+}
+
+.AttractionReserve {
+    display: grid;
+    grid-template-rows: 90px 310px;
+    margin-left: 30px;
+    flex-grow: 1;
+    width: calc(50% - 15px);
+}@media (max-width:800px){
+    .AttractionReserve {
+        display: block;
+        width: calc(100% - 15px);
+        margin: 20px 10px;
+    }
 }
 
 .AttractionReserveTop {
@@ -176,6 +196,10 @@
     border-radius: 5px;
     width: 100%;
     height: 310px;
+}@media (max-width:800px){
+    .AttractionReserveBottom {
+        margin-top: 20px;
+    }
 }
 
 .AttractionReserveBottom .title{
@@ -248,6 +272,10 @@ input[type="radio"]:checked::before {
     padding: 5px 10px;
     font-size: 16px;
     border: none;
+}@media (max-width:800px){
+    .ReserveDate {
+        width: 181px;
+    }
 }
 
 .Cost{
@@ -268,7 +296,9 @@ input[type="radio"]:checked::before {
     border: none;
     cursor: pointer;
 }
+
 .ReserveDetail{
+    padding: 0px 20px;
     height: 100%;
     margin: 50px auto 120px;
     max-width: 1200px;
