--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -21,7 +21,11 @@
 body {
     overflow-x: hidden;
     height: 100%;
-    width:100vw;
+    width:100%;
     margin:0px;
     
+}
+
+a {
+    text-decoration:none;
 }
