set navbar widh to 100%

--- a/templates/attraction.html
+++ b/templates/attraction.html
@@ -12,6 +12,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&amp;display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class = "loginModal">
+        
+    </div>
     <div class = "Navbar">
         <div class = "NavbarContent" >
             <div class = "NavSlogan">
