--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -6,7 +6,7 @@
     background-color: var(--ADDITIONAL_COLOR_WHITE);
     justify-content: space-between;
     font-size: 20px;
-    width: 100vw;
+    width: 100%;
     height: 54px;
     line-height:54px;
     border: 1px solid #E8E8E8;
