--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&amp;display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class = "blackCover"></div>
+    <div class = "SignupModal">
+        <div class  = "TopBorder"></div>
+        <div class = "SignupTitle">註冊會員帳號</div>
+        <form class = "SignupForm" action="javascript:void(-1)">
+            <input class = "SignupInput" name = "userName" type="password" placeholder="輸入姓名">
+            <input class = "SignupInput" name = "email" type="email" placeholder="輸入電子郵件">
+            <input class = "SignupInput" name = "password" type="password" placeholder="輸入密碼">
+            <button class="SignupFormButton">註冊新帳戶</button>
+        </form>
+        <div class = "LoginModalLogin">已經有帳戶了？點此登入</div>
+    </div>
     <div class = "Navbar">
         <div class = "NavbarContent" >
             <div class = "NavSlogan">
