--- a/templates/attraction.html
+++ b/templates/attraction.html
@@ -15,6 +15,7 @@
     <div class = "blackCover"></div>
     <div class = "LoginModal">
         <div class  = "TopBorder"></div>
+        <div class = "CloseButton"></div>
         <div class = "LoginTitle">登入會員帳號</div>
         <form class = "LoginForm" action="javascript:void(-1)">
             <input class = "LoginInput" name = "email" type="email" placeholder="輸入電子信箱">
