--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,7 @@
     <div class = "blackCover"></div>
     <div class = "SignupModal">
         <div class  = "TopBorder"></div>
+        <div class = "CloseButton"></div>
         <div class = "SignupTitle">註冊會員帳號</div>
         <form class = "SignupForm" action="javascript:void(-1)">
             <input class = "SignupInput" name = "userName" type="password" placeholder="輸入姓名">
