--- a/templates/attraction.html
+++ b/templates/attraction.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&amp;display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- 登入及註冊modal -->
     <div class = "blackCover"></div>
     <div class = "LoginModal">
         <div class  = "TopBorder"></div>
@@ -24,6 +25,19 @@
         </form>
         <div class = "LoginModalSignup">還沒有帳戶？點此註冊</div>
     </div>
+    <div class = "SignupModal">
+        <div class  = "TopBorder"></div>
+        <div class = "CloseButton"></div>
+        <div class = "SignupTitle">註冊會員帳號</div>
+        <form class = "SignupForm" action="javascript:void(-1)">
+            <input class = "SignupInput" name = "name" type="password" placeholder="輸入姓名">
+            <input class = "SignupInput" name = "email" type="email" placeholder="輸入電子郵件">
+            <input class = "SignupInput" name = "password" type="password" placeholder="輸入密碼">
+            <button class="SignupFormButton">註冊新帳戶</button>
+        </form>
+        <div class = "LoginModalLogin">已經有帳戶了？點此登入</div>
+    </div>
+
     <div class = "Navbar">
         <div class = "NavbarContent" >
             <div class = "NavSlogan">
