--- a/templates/attraction.html
+++ b/templates/attraction.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <!-- 登入及註冊modal -->
-    <div class = "blackCover"></div>
+    <div class = "BlackCover"></div>
     <div class = "LoginModal">
         <div class  = "TopBorder"></div>
         <div class = "CloseButton"></div>
