--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <!-- 登入及註冊modal -->
-    <div class = "blackCover"></div>
+    <div class = "BlackCover"></div>
     <div class = "Modal">
         <div class  = "TopBorder"></div>
         <div class = "CloseButton"></div>
@@ -24,7 +24,7 @@
                 <input class = "LoginInput" name = "password" type="password" placeholder="輸入密碼">
                 <button class="LoginFormButton">登入帳戶</button>
             </form>
-            <div class = "LoginModalSignup">還沒有帳戶？點此註冊</div>
+            <div class = "ChangeModalToSignup">還沒有帳戶？點此註冊</div>
         </div>
         <div class = "Signup ToggleBox">
             <div class = "SignupTitle">註冊會員帳號</div>
@@ -34,7 +34,7 @@
                 <input class = "SignupInput" name = "password" type="password" placeholder="輸入密碼">
                 <button class="SignupFormButton">註冊新帳戶</button>
             </form>
-            <div class = "LoginModalLogin">已經有帳戶了？點此登入</div>
+            <div class = "ChangeModalToLogin">已經有帳戶了？點此登入</div>
         </div>
     </div>
     <div class = "SignupModal">
@@ -60,7 +60,7 @@
                     <div class = "Item">
                         預定行程
                     </div>
-                    <div class = "Item">
+                    <div class = "OpenModal Item">
                         登入/註冊
                     </div>
             </div>
