add login api and modal event

--- a/templates/attraction.html
+++ b/templates/attraction.html
@@ -40,9 +40,11 @@
 
     <div class = "Navbar">
         <div class = "NavbarContent" >
-            <div class = "NavSlogan">
-                台北一日遊
-            </div>
+            <a href="/">
+                <div class = "NavSlogan">
+                    台北一日遊
+                </div>
+            </a>
             <div class = "NavItem" id = "sidbarTrigger" >
                     <div class = "Item">
                         預定行程
