--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -190,7 +190,7 @@ a {
     margin-bottom: 10px;
 }
 
-.LoginModalLogin{
+.ToggleWord{
     font-weight: 500;
     font-size: 16px;
     color: var(--SECONDARY_COLOR_GRAY_70);
