--- a/templates/index.html
+++ b/templates/index.html
@@ -17,14 +17,14 @@
     <div class = "Modal">
         <div class  = "TopBorder"></div>
         <div class = "CloseButton"></div>
-        <div class = "Login ToggleBox">
+        <div class = "Login ToggleBox show">
             <div class = "LoginTitle">登入會員帳號</div>
             <form class = "LoginForm" action="javascript:void(-1)">
                 <input class = "LoginInput" name = "email" type="email" placeholder="輸入電子信箱">
                 <input class = "LoginInput" name = "password" type="password" placeholder="輸入密碼">
                 <button class="LoginFormButton">登入帳戶</button>
             </form>
-            <div class = "ChangeModalToSignup">還沒有帳戶？點此註冊</div>
+            <div class = "ChangeModalToSignup ToggleWord">還沒有帳戶？點此註冊</div>
         </div>
         <div class = "Signup ToggleBox">
             <div class = "SignupTitle">註冊會員帳號</div>
@@ -34,28 +34,17 @@
                 <input class = "SignupInput" name = "password" type="password" placeholder="輸入密碼">
                 <button class="SignupFormButton">註冊新帳戶</button>
             </form>
-            <div class = "ChangeModalToLogin">已經有帳戶了？點此登入</div>
+            <div class = "ChangeModalToLogin ToggleWord">已經有帳戶了？點此登入</div>
         </div>
     </div>
-    <div class = "SignupModal">
-        <div class  = "TopBorder"></div>
-        <div class = "CloseButton"></div>
-        <div class = "SignupToggleBox">
-            <div class = "SignupTitle">註冊會員帳號</div>
-            <form class = "SignupForm" action="javascript:void(-1)">
-                <input class = "SignupInput" name = "name" type="password" placeholder="輸入姓名">
-                <input class = "SignupInput" name = "email" type="email" placeholder="輸入電子郵件">
-                <input class = "SignupInput" name = "password" type="password" placeholder="輸入密碼">
-                <button class="SignupFormButton">註冊新帳戶</button>
-            </form>
-            <div class = "LoginModalLogin">已經有帳戶了？點此登入</div>
-        </div>
-    </div>
+
     <div class = "Navbar">
         <div class = "NavbarContent" >
-            <div class = "NavSlogan">
-                台北一日遊
-            </div>
+            <a href="/">
+                <div class = "NavSlogan">
+                    台北一日遊
+                </div>
+            </a>
             <div class = "NavItem" id = "sidbarTrigger" >
                     <div class = "Item">
                         預定行程
@@ -90,7 +79,9 @@
     </div>
     <div class = "ScrollLoader"></div>
     <script type="module" src="scripts/dataService.js"></script>
+    <script type="module" src="scripts/memberService.js"></script>
     <script type="module" src="scripts/carouselSearchController.js"></script>
     <script type="module" src="scripts/contentController.js"></script>
+    <script type="module" src="scripts/modalController.js"></script>
     <script type="module" src="scripts/trigger.js"></script>
 </body>
