--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
         <div class = "CloseButton"></div>
         <div class = "Login ToggleBox show">
             <div class = "LoginTitle">登入會員帳號</div>
-            <form class = "LoginForm" action="javascript:void(-1)">
+            <form class = "LoginForm">
                 <input class = "LoginInput" name = "email" type="email" placeholder="輸入電子信箱">
                 <input class = "LoginInput" name = "password" type="password" placeholder="輸入密碼">
                 <button class="LoginFormButton">登入帳戶</button>
@@ -84,4 +84,5 @@
     <script type="module" src="scripts/contentController.js"></script>
     <script type="module" src="scripts/modalController.js"></script>
     <script type="module" src="scripts/trigger.js"></script>
+    <script type="module" src="scripts/navbarController.js"></script>
 </body>
