--- a/templates/attraction.html
+++ b/templates/attraction.html
@@ -21,9 +21,9 @@
         <div class = "Login ToggleBox show">
             <div class = "LoginTitle">登入會員帳號</div>
             <form class = "LoginForm" action="javascript:void(-1)">
-                <input class = "LoginInput" name = "email" type="email" placeholder="輸入電子信箱">
+                <input class = "LoginInput" name = "email" type="text" placeholder="輸入電子信箱">
                 <input class = "LoginInput" name = "password" type="password" placeholder="輸入密碼">
-                <button class="LoginFormButton">登入帳戶</button>
+                <button type = "submit" class="LoginFormButton">登入帳戶</button>
             </form>
             <div class = "ChangeModalToSignup ToggleWord">還沒有帳戶？點此註冊</div>
             <div class = LoginMessage></div>
@@ -32,10 +32,10 @@
         <div class = "Signup ToggleBox">
             <div class = "SignupTitle">註冊會員帳號</div>
             <form class = "SignupForm" action="javascript:void(-1)">
-                <input class = "SignupInput" name = "name" type="password" placeholder="輸入姓名">
-                <input class = "SignupInput" name = "email" type="email" placeholder="輸入電子郵件">
+                <input class = "SignupInput" name = "name" type="text" placeholder="輸入姓名">
+                <input class = "SignupInput" name = "email" type="text" placeholder="輸入電子郵件">
                 <input class = "SignupInput" name = "password" type="password" placeholder="輸入密碼">
-                <button class="SignupFormButton">註冊新帳戶</button>
+                <button type = "submit" type = "button" class="SignupFormButton">註冊新帳戶</button>
             </form>
             <div class = "ChangeModalToLogin ToggleWord">已經有帳戶了？點此登入</div>
             <div class = SignupMessage></div>
