--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -28,6 +28,10 @@ body {
     
 }
 
+button {
+    cursor: pointer;
+}
+
 a {
     text-decoration:none;
 }
@@ -88,6 +92,7 @@ a {
     display: none;
     flex-direction: column;
     align-items: center;
+    cursor: pointer;
 }
 
 .Login.ToggleBox.show {
@@ -190,6 +195,10 @@ a {
     margin-bottom: 10px;
 }
 
+.LoginMessage{
+    color: var(--SECONDARY_COLOR_GRAY_70);
+}
+
 .SignupMessage{
     color: var(--SECONDARY_COLOR_GRAY_70);
 }
@@ -210,10 +219,12 @@ a {
 
 .OpenModal.Item.show{
     display: flex;
+    cursor: pointer;
 }
 
 .LogoutModal.Item.show{
     display: flex;
+    cursor: pointer;
 }
 
 
