--- a/templates/index.html
+++ b/templates/index.html
@@ -21,9 +21,9 @@
         <div class = "Login ToggleBox show">
             <div class = "LoginTitle">登入會員帳號</div>
             <form class = "LoginForm" action="javascript:void(-1)">
-                <input class = "LoginInput" name = "email" type="email" placeholder="輸入電子信箱">
+                <input class = "LoginInput" name = "email" type="text" placeholder="輸入電子信箱">
                 <input class = "LoginInput" name = "password" type="password" placeholder="輸入密碼">
-                <button class="LoginFormButton">登入帳戶</button>
+                <button type = "submit" class="LoginFormButton">登入帳戶</button>
             </form>
             <div class = "ChangeModalToSignup ToggleWord">還沒有帳戶？點此註冊</div>
             <div class = LoginMessage></div>
@@ -32,10 +32,10 @@
         <div class = "Signup ToggleBox">
             <div class = "SignupTitle">註冊會員帳號</div>
             <form class = "SignupForm" action="javascript:void(-1)">
-                <input class = "SignupInput" name = "name" type="password" placeholder="輸入姓名">
-                <input class = "SignupInput" name = "email" type="email" placeholder="輸入電子郵件">
+                <input class = "SignupInput" name = "name" type="text" placeholder="輸入姓名">
+                <input class = "SignupInput" name = "email" type="text" placeholder="輸入電子郵件">
                 <input class = "SignupInput" name = "password" type="password" placeholder="輸入密碼">
-                <button class="SignupFormButton">註冊新帳戶</button>
+                <button type = "submit" class="SignupFormButton">註冊新帳戶</button>
             </form>
             <div class = "ChangeModalToLogin ToggleWord">已經有帳戶了？點此登入</div>
             <div class = SignupMessage></div>
@@ -67,9 +67,9 @@
         <div class = "CarouselContent">  
             <div class = "CarouselSloganFirst" style = "font-size: 28px">輕鬆享受台北一日悠閒</div>
             <div class = "CarouselSloganSecond">探索每個角落，體驗城市的深度旅遊行程</div>
-            <form class = "CarouselSearch" action="javascript:void(-1)">
+            <form class = "CarouselSearch">
                 <input class = "CarouselInput" name="keyword"  placeholder="輸入景點名稱查詢" type = "text">
-                <button class = "CarouselButton" type="button"><img src="images/icon_search.png"></button>
+                <button class = "CarouselButton" type="submit"><img src="images/icon_search.png"></button>
                 <div class = "SearchAutoComplete">
                 </div>
             </form>
