--- a/templates/index.html
+++ b/templates/index.html
@@ -86,11 +86,14 @@
         </div>
     </div>
     <div class = "ScrollLoader"></div>
-    <script type="module" src="scripts/dataService.js"></script>
-    <script type="module" src="scripts/memberService.js"></script>
-    <script type="module" src="scripts/carouselSearchController.js"></script>
-    <script type="module" src="scripts/contentController.js"></script>
-    <script type="module" src="scripts/modalController.js"></script>
-    <script type="module" src="scripts/trigger.js"></script>
-    <script type="module" src="scripts/navbarController.js"></script>
+    
+    <script type="module" src="scripts/service/dataService.js"></script>
+    <script type="module" src="scripts/service/memberService.js"></script>
+
+    <script type="module" src="scripts/controller/carouselSearchController.js"></script>
+    <script type="module" src="scripts/controller/contentController.js"></script>
+    <script type="module" src="scripts/controller/modalController.js"></script>
+    <script type="module" src="scripts/controller/navbarController.js"></script>
+
+    <script type="module" src="scripts/global/trigger.js"></script>
 </body>
