--- a/templates/attraction.html
+++ b/templates/attraction.html
@@ -80,7 +80,7 @@
                 <div class = "AttractionReserveBottom">
                     <div class = "title">訂購導覽行程</div>
                     <div class = "text">以此景點為中心的一日行程，帶你探索城市角落故事</div>
-                    <form class="Reserve">
+                    <form class="ReserveForm" action="javascript:void(-1)">
                         <div>
                             <label class = "Value">選擇日期:
                                 <input class = "ReserveDate" type="date" name="reserveDate" placeholder="dd-mm-yyyy">
@@ -123,5 +123,5 @@
     <script type="module" src="../scripts/controller/attractionCarouselController.js"></script>
     <script type="module" src="../scripts/controller/attractionReserveController.js"></script>
     <script type="module" src="../scripts/controller/modalController.js"></script>
-    <script type="module" src="../scriptscontroller//navbarController.js"></script>
+    <script type="module" src="../scripts/controller/navbarController.js"></script>
 </body>
