--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&amp;display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- 共用元件區域 -->
+    <!-- 共用元件區域-Start -->
     <!-- 登入及註冊modal -->
     <div class = "BlackCover"></div>
     <div class = "Modal">
@@ -50,7 +50,12 @@
                 </div>
             </a>
             <div class = "NavItem" id = "sidbarTrigger" >
-                    <div class = "Item">
+                    <a href="/booking">
+                        <div class = "Booking Item">
+                            預定行程
+                        </div>
+                    </a>
+                    <div class = "OpenModal Item show">
                         預定行程
                     </div>
                     <div class = "OpenModal Item show">
@@ -62,7 +67,7 @@
             </div>
         </div>
     </div>
-    <!-- 共用元件區域 -->
+    <!-- 共用元件區域-End -->
     <div class = "Carousel">  
         <div class = "CarouselContent">  
             <div class = "CarouselSloganFirst" style = "font-size: 28px">輕鬆享受台北一日悠閒</div>
