--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -67,6 +67,8 @@ a {
     top: 27px;
     right: 17px;
     background: url(../images/icon_close.png);
+    cursor: pointer;
+
 }
 
 .Modal {
@@ -92,7 +94,6 @@ a {
     display: none;
     flex-direction: column;
     align-items: center;
-    cursor: pointer;
 }
 
 .Login.ToggleBox.show {
@@ -209,6 +210,59 @@ a {
     color: var(--SECONDARY_COLOR_GRAY_70);
 }
 
+.Navbar {
+    top: 0px;
+    display: flex;
+    position: fixed;
+    z-index: 9;
+    background-color: var(--ADDITIONAL_COLOR_WHITE);
+    justify-content: space-between;
+    font-size: 20px;
+    width: 100%;
+    height: 54px;
+    line-height:54px;
+    border: 1px solid #E8E8E8;
+}
+.NavbarContent{
+    margin: 0px auto;
+    background-color: var(--WHITE_BACKGROUND);
+    width:100%;
+    max-width: 1200px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.NavSlogan {
+
+    color: var(--PRIMARY_COLOR);
+    margin-left: 10px;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 54px;
+}
+
+.NavItem {
+
+    background-color: var(--ADDITIONAL_COLOR_WHITE);
+    text-decoration:none;
+    color:black;
+    display: flex;
+    margin-right: 10px;
+}
+
+
+.NavItem .Item {
+    font-family: 'Noto Sans TC';
+    font-style: normal;
+    font-weight: 500;
+    line-height: 54px;
+    color: var(--SECONDARY_COLOR_GRAY_70);
+    text-decoration: none;
+    display: block;
+    margin-left: 20px;
+    font-size: 16px;
+}
+
 .OpenModal.Item{
     display: none;
 }
@@ -238,7 +292,23 @@ a {
     cursor: pointer;
 }
 
+.Footer {
+    display: flex;
+    width:100%;
+    height: 104px;
+    bottom: 0;
+    background: var(--GRAY_700);
+}
 
+.FooterContent{
+    color: var(--ADDITIONAL_COLOR_WHITE);
+    margin: 0px auto;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    max-width: 1200px;
+    line-height: 104px;
+}
 
 
 
