booking html all done

--- a/templates/attraction.html
+++ b/templates/attraction.html
@@ -117,9 +117,11 @@
         </div>
     </div>
 
-    <div class = "Footer">
-        <div class = "FooterContent">
-            COPYRIGHT © 2021 台北一日遊
+    <div class = "FooterWrapper">
+        <div class = "Footer">
+            <div class = "FooterContent">
+                COPYRIGHT © 2021 台北一日遊
+            </div>
         </div>
     </div>
     <script type="module" src="../scripts/service/dataService.js"></script>
