--- a/templates/index.html
+++ b/templates/index.html
@@ -85,9 +85,11 @@
         <div class = "Content">
         </div>
     </div>
-    <div class = "Footer">
-        <div class = "FooterContent">
-            COPYRIGHT © 2021 台北一日遊
+    <div class = "FooterWrapper">
+        <div class = "Footer">
+            <div class = "FooterContent">
+                COPYRIGHT © 2021 台北一日遊
+            </div>
         </div>
     </div>
     <div class = "ScrollLoader"></div>
