--- a/static/styles/booking.css
+++ b/static/styles/booking.css
@@ -1,9 +1,11 @@
 .Content {
+    position: relative;
     margin: 100px auto 0px auto;
-    max-width: 1200px;
+    max-width: 1040px;
 }@media (max-width: 800px){
     .Content{
-        margin: 54px auto 0px auto;
+        margin: 100px auto 0px auto;
+        padding: 10px;
     }
 }
 
@@ -18,21 +20,65 @@
     display: flex;
     align-items: center;
     color: var(--SECONDARY_COLOR_GRAY_70);
+    margin-left: -8px;
+}@media (max-width:1040px){
+    .UserText {
+        margin-left: 0px;
+    }
 }
 
 .Reservations {
-    margin-top: 35px;
     margin-bottom: 40px;
-    
 }
 
 .Reservation{
+    position: relative;
+    margin-top: 35px;
     display:flex;
+}@media (max-width:800px){
+    .Reservation {
+        display:block;
+    }
+}
+
+.ReservationNone {
+    display: none;
+    height: 24px;
+    font-family: 'Noto Sans TC';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 13px;
+    color: #666666;
+    margin-top: 36px;
+}
+
+.ReservationNone.show {
+    display: block;
+}
+
+.IconDelete{
+    position: absolute;
+    right: 20px;
+    top: 10px;
+    width: 30px;
+    height: 30px;
+}@media (max-width:800px){
+    .IconDelete {
+        right: 10px;
+        bottom: 30px;
+        top: auto;
+    }
 }
 
 .ImgWrapper {
     width: 266px;
     height: 200px;
+}@media (max-width:800px){
+    .ImgWrapper {
+        width: 100%;
+        height: auto;
+    }
 }
 
 .ImgWrapper img {
@@ -41,11 +87,54 @@
     height: 100%;
 }
 
+.ReservationTitle {
+    height: 14px;
+    font-family: 'Noto Sans TC';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 13px;
+    display: flex;
+    align-items: center;
+    color: #448899;
+    margin: 10px 0 30px 25px;
+}@media (max-width:800px){
+    .ReservationTitle {
+        margin: 10px 0 30px 0;
+    }
+}
+
 .ReservationDetail{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
+
+.ReservationDetail div{
+    height: 14px;
+    font-family: 'Noto Sans TC';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 13px;
+    display: flex;
+    align-items: center;
+    color: #666666;
+    margin: 0 0 20px 25px;
+}@media (max-width:800px){
+    .ReservationDetail div {
+        margin: 0 0 20px 0;
+    }
+}
+
+.ConfirmForm{
+    display: none;
+}
+
+.ConfirmForm.show{
+    display: block;
+}
+
 .FormTitle {
     margin: 42px 0 0 0;
     height: 16px;
@@ -65,6 +154,14 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+
+Form.Contact {
+    margin-bottom: 20px;
+}
+
+Form.CreditCard {
+    margin-bottom: 40px;
 }
 
 .DivInput{
@@ -99,7 +196,6 @@
 }
 
 .ContactTip{
-    height: 14px;
     font-family: 'Noto Sans TC';
     font-style: normal;
     font-weight: 700;
@@ -108,4 +204,38 @@
     display: flex;
     align-items: center;
     color: #666666;
+    margin-bottom: 45px;
+}@media (max-width:800px){
+    .ContactTip{
+        line-height: 23px;
+    }
+}
+
+
+
+.TotalPrice {
+    width: 100%;
+    height: 14px;
+    font-family: 'Noto Sans TC';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 13px;
+    text-align: right;
+    color: #666666;
+    margin: 43px 0 25px auto ;
+}  
+
+.ConfirmAndPay {
+    margin: 0 0 62px auto;
+    display: flex;
+    height: 36px;
+    width: 173px;
+    font-weight: 400;
+    font-size: 19px;
+    background: #448899;
+    border-radius: 5px;
+    color: #FFFFFF;
+    line-height: 34px;
+    padding:0 20px;
 }
