--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -36,6 +36,10 @@ a {
     text-decoration:none;
 }
 
+hr {
+    border: 1px solid #E8E8E8;
+}
+
 .BlackCover {
     display: none;
     z-index: 99;
@@ -292,10 +296,17 @@ a {
     cursor: pointer;
 }
 
+.FooterWrapper {
+    position: relative;
+}
+
 .Footer {
+    top: 0;
+    position: absolute;
     display: flex;
     width:100%;
-    height: 104px;
+    height: 80vh;
+    min-height: 104px;
     bottom: 0;
     background: var(--GRAY_700);
 }
@@ -309,6 +320,7 @@ a {
     max-width: 1200px;
     line-height: 104px;
 }
+
 
 
 
