--- a/templates/booking.html
+++ b/templates/booking.html
@@ -70,73 +70,72 @@
     </div>
     <!-- 共用元件區域-End -->
     <div class = "Content">
-        <div class = "UserText">您好垃圾你的待預定行程去垃圾桶找吧</div>
+        <div class = "UserText">請先登入查看您的預定行程</div>
         <div class = "Reservations">
-            <div class = "Reservation">
-                <div class = "ImgWrapper">
-                    <img src = "https://www.travel.taipei/d_upload_ttn/sceneadmin/…150/F719/71eb4b56-f771-43bc-856c-2fb265a5cc6e.jpg">
-                </div>
-                <div class = "ReservationDetail">
-                    <p>日期：</p><div class = "Date"></div>
-                    <p>時間：</p><div class = "Time"></div>
-                    <p>費用：</p><div class = "Address"></div>
-                    <div class = "Price"><p>地點：</p></div>
-
-                </div>
-            </div>
+            <div class = "ReservationNone">目前沒有任何待預訂的行程</div>
         </div>
-        <hr>
-        <div class = "FormTitle">您的聯絡資訊</div>
-        <form class = "Contact Form">
-            <div class = "DivInput">
-                <label class = "Value">聯絡姓名 : 
-                    <input class = "ReserveDate" type="text" name="reserveDate">
-                </label>
-            </div>
-            <div class = "DivInput">
-                <label class = "Value">聯絡信箱 : 
-                    <input class = "ReserveDate" type="text" name="reserveDate">
-                </label>
-            </div>
-            <div class = "DivInput">
-                <label class = "Value">手機號碼 : 
-                    <input class = "ReserveDate" type="text" name="reserveDate">
-                </label>
-            </div>
-        </form>
-        <div class = "ContactTip">請保持手機暢通，準時到達，導覽人員將用手機與您聯繫，務必留下正確的聯絡方式。</div>
-        <hr>
-        <div class = "FormTitle">信用卡付款資訊</div>
-        <form class = "CreditCard Form">
-            <div class = "DivInput" >
-                <label class = "Value">卡片號碼 :
-                    <input class = "ReserveDate" type="text" name="reserveDate">
-                </label>
-            </div>
-            <div class = "DivInput">
-                <label class = "Value">過期時間 :
-                    <input class = "ReserveDate" type="text" name="reserveDate">
-                </label>
-            </div>
-            <div class = "DivInput">
-                <label class = "Value">驗證密碼 :
-                    <input class = "ReserveDate" type="text" name="reserveDate">
-                </label>
-            </div>
-        </form>
-        <hr></hr>
+        <div class = "ConfirmForm">
+            <hr>
+            <div class = "FormTitle">您的聯絡資訊</div>
+            <form class = "Contact Form">
+                <div class = "DivInput">
+                    <label class = "Value">聯絡姓名 : 
+                        <input class = "ReserveDate" type="text" name="reserveDate">
+                    </label>
+                </div>
+                <div class = "DivInput">
+                    <label class = "Value">聯絡信箱 : 
+                        <input class = "ReserveDate" type="text" name="reserveDate">
+                    </label>
+                </div>
+                <div class = "DivInput">
+                    <label class = "Value">手機號碼 : 
+                        <input class = "ReserveDate" type="text" name="reserveDate">
+                    </label>
+                </div>
+            </form>
+            <div class = "ContactTip">請保持手機暢通，準時到達，導覽人員將用手機與您聯繫，務必留下正確的聯絡方式。</div>
+            <hr>
+            <div class = "FormTitle">信用卡付款資訊</div>
+            <form class = "CreditCard Form">
+                <div class = "DivInput" >
+                    <label class = "Value">卡片號碼 :
+                        <input class = "ReserveDate" type="text" name="reserveDate">
+                    </label>
+                </div>
+                <div class = "DivInput">
+                    <label class = "Value">過期時間 :
+                        <input class = "ReserveDate" type="text" name="reserveDate">
+                    </label>
+                </div>
+                <div class = "DivInput">
+                    <label class = "Value">驗證密碼 :
+                        <input class = "ReserveDate" type="text" name="reserveDate">
+                    </label>
+                </div>
+            </form>
+            <hr></hr>
+            <div class = "TotalPrice"></div>
+            <div class = "ConfirmAndPay">確認訂購並付款</div>  
+        </div>  
     </div>
 
 
-
-    <div class = "Footer">
-        <div class = "FooterContent">
-            COPYRIGHT © 2021 台北一日遊
+    <div class = "FooterWrapper">
+        <div class = "Footer">
+            <div class = "FooterContent">
+                COPYRIGHT © 2021 台北一日遊
+            </div>
         </div>
     </div>
+
     <script type="module" src="../scripts/service/dataService.js"></script>
     <script type="module" src="../scripts/service/memberService.js"></script>
+    <script type="module" src="../scripts/service/reservationsService.js"></script>
+
 
     <script type="module" src="../scripts/controller/modalController.js"></script>
     <script type="module" src="../scripts/controller/navbarController.js"></script>
+    <script type="module" src="../scripts/controller/reservationsController.js"></script>
+
 </body>
